# grupal_02_prog_conc

./: CMakeLists.txt  README.md  intersecciones.pgm  main.cpp
